# spirrow-magickit

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  spirrow-magickit-mcp.service  start-mcp.sh  start.sh
config/: magickit_config.yaml
docs/: DESIGN.md  Spirrow-Magickit_設計書.md
src/magickit/: __init__.py  config.py  main.py  mcp_server.py
src/magickit/adapters/: __init__.py  base.py  cognilens.py  discord.py  lexora.py  mcp_base.py  prismind.py  slack.py
src/magickit/api/: __init__.py  models.py  routes.py  routes_v2.py  websocket.py
src/magickit/auth/: __init__.py  dependencies.py  jwt.py  middleware.py  permissions.py
src/magickit/core/: __init__.py  dependency_graph.py  event_publisher.py  lock_manager.py  migrations.py  notification_manager.py  project_manager.py  state_manager.py  task_queue.py  workspace_manager.py
src/magickit/mcp/: __init__.py
src/magickit/mcp/tools/: __init__.py  document.py  execution.py  generation.py  health.py  orchestration.py  project.py  research.py  session.py  specification.py  task.py
src/magickit/static/css/: dashboard.css
src/magickit/templates/: base.html  dashboard.html  projects.html  tasks.html
src/magickit/utils/: __init__.py  logging.py  user.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_integration.py  test_prismind_adapter.py
tests/unit/: __init__.py  test_dependency_graph.py  test_execution.py  test_lock_manager.py  test_mcp_adapters.py  test_notification.py  test_project_manager.py  test_specification.py  test_task.py  test_task_queue.py  test_workspace_manager.py
(+1 files in other folders)
